# OpenDiff

./: CACHING.md  DEPLOY.md  Dockerfile  GITHUB.md  INFINITE.md  QUICKSTART.md  README.md  RESTRICTIONS.md  TEAM.md  docker-compose.yml  index.html  package-lock.json  package.json  pr-reviewer (1).html  render.yaml  server.js
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml
backend/src/: db.rs  errors.rs  main.rs  models.rs  ws.rs
backend/src/handlers/: auth.rs  mod.rs  prs.rs  reviews.rs
frontend/public/: index.html
