[package]
name = "opendiff-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-ws = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2.5", features = ["tokio-runtime"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
